make cleaner index page, so it loads fast when hitting it

--- a/iceprod/server/data/www_templates/main.html
+++ b/iceprod/server/data/www_templates/main.html
@@ -2,129 +2,12 @@
 
 {% block title %}IceProd{% end %}
 
-{% block page_title %}Status{% end %}
+{% block page_title %}IceCube Production System{% end %}
 
 {% block body %}
+<h4>Running grid jobs since 2007</h4>
 
-<div class="status_graphs">
-  <h4>Active Tasks</h4>
-  <div id="active_tasks_legend"></div>
-  <canvas id="active_tasks"></canvas>
-  <h4>Completed Tasks</h4>
-  <canvas id="completed_tasks"></canvas>
-</div>
+<h2 style="margin-top:1em">Active Datasets: <a href="/dataset">here</a></h2>
 
-<h2>Active Datasets:</h2>
-{% for s in datasets %}
-<div>
-  <div style="display:inline;width:40px"><a href="/dataset?status={{ url_escape(s) }}">{{ s }}</a></div>
-  <div style="display:inline;width:40px">{{ datasets[s] }}</div>
-</div>
+<h3 style="margin-top:2em"><a href="/submit">Submit a new dataset</a></h3>
 {% end %}
-
-<h3 style="margin-top:3em"><a href="/submit">Submit a new dataset</a></h3>
-
-{% end %}
-
-{% block body_scripts %}
-<script type="text/javascript" src="/static/json-rpc.js"></script>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
-<script type="text/javascript" src="/static/chart.stackedarea.js"></script>
-<script type="text/javascript">
-function pad(num) {
-  var numStr = num.toString();
-  var numZeros = 2 - numStr.length;
-  for (var i = 1; i <= numZeros; i++) {
-     numStr = "0" + numStr;
-  }
-   return numStr;
-}
-function get_date(input) {
-  var d = new Date(input);
-  //d.setHours(d.getHours() - hrs);
-  if (d.getUTCMinutes() == 0)
-    return pad(d.getUTCHours()) + ':' + pad(d.getUTCMinutes());
-  else
-    return "";
-}
-
-jQuery(document).ready(function() {
-    RPCclient("public_get_graphs",{start:60*24},callback=function(return_data){
-        var active_labels = [];
-        var completed_labels = [];
-        var active_data = {queued:[], processing:[], suspended:[], failed:[], resume:[], reset: []};
-        var completed_data = [];
-        var d;
-        for(var i=0;i<return_data.length;i++) {
-            d = return_data[i];
-            if (d["name"] == "active_tasks") {
-                active_labels.push("");
-                for(var k in active_data) {
-                    if (k in d["value"])
-                        active_data[k].push(d["value"][k]);
-                    else
-                        active_data[k].push(0);
-                }
-            } else if (d["name"] == "completed_tasks") {
-                completed_labels.push(get_date(d["timestamp"]));
-                completed_data.push(d["value"]["completions"]);
-            }
-        }
-        var active = {
-            labels: active_labels,
-            datasets: [{
-                label: "queued",
-                fillColor: "#5da5da",
-                strokeColor: "#5da5da",
-                data: active_data["queued"]
-            },{
-                label: "processing",
-                fillColor: "#60bd68",
-                strokeColor: "#60bd68",
-                data: active_data["processing"]
-            },{
-                label: "suspended",
-                fillColor: "#decf3f",
-                strokeColor: "#decf3f",
-                data: active_data["suspended"]
-            },{
-                label: "failed",
-                fillColor: "#f15854",
-                strokeColor: "#f15854",
-                data: active_data["failed"]
-            },{
-                label: "resume",
-                fillColor: "#faa43a",
-                strokeColor: "#faa43a",
-                data: active_data["resume"]
-            },{
-                label: "reset",
-                fillColor: "#faa43a",
-                strokeColor: "#faa43a",
-                data: active_data["reset"]
-            }]
-        };
-        var completed = {
-            labels: completed_labels,
-            datasets:[{
-                label: "completed",
-                fillColor: "#5da5da",
-                strokeColor: "#5da5da",
-                data: completed_data
-            }]
-        };
-        var settings = {
-            animation: false,
-            showTooltips: false,
-            scaleShowGridLines: false,
-            scaleShowVerticalLines: false,
-            bezierCurve : false,
-            pointDot: false
-        };
-        var at_chart = new Chart($("#active_tasks").get(0).getContext("2d")).StackedArea(active, settings);
-        $('#active_tasks_legend').html(at_chart.generateLegend());
-        new Chart($("#completed_tasks").get(0).getContext("2d")).Line(completed, settings);
-    });
-});
-</script>
-{% end %}   
