--- a/iceprod/server/data/www_templates/job_detail.html
+++ b/iceprod/server/data/www_templates/job_detail.html
@@ -25,7 +25,7 @@
 
 {% if (current_user) %}
 <div class="action">
-    <button onclick='set_jobs_status(dataset_id, ["{{ job["job_id"] }}"], "processing", "{{ passkey }}", ["queued", "processing", "failed", "suspended"]);'>Reset</button>
+    <button onclick='set_jobs_status(dataset_id, ["{{ job["job_id"] }}"], "processing", "{{ passkey }}", ["queued", "processing", "errors", "suspended"]);'>Reset</button>
     <button onclick='set_jobs_status(dataset_id, ["{{ job["job_id"] }}"], "processing", "{{ passkey }}");'>Hard Reset</button>
     <button onclick='set_jobs_status(dataset_id, ["{{ job["job_id"] }}"], "suspended", "{{ passkey }}", ["idle", "waiting", "queued", "processing", "reset"]);'>Suspend</button>
 </div>
