--- a/iceprod/website/data/www_templates/task_detail.html
+++ b/iceprod/website/data/www_templates/task_detail.html
@@ -108,7 +108,98 @@
 <script type="text/javascript" src="/static/fetch.js"></script>
 <script type="text/javascript" src="/static/rest.js"></script>
 <script>
-var dataset_id = "{{ task['dataset_id'] if task else '' }}";
+const passkey = "{{ passkey }}";
+const dataset_id = "{{ task['dataset_id'] if task else '' }}";
+const job_id = "{{ task['job_id'] if task else '' }}";
+const task_id = "{{ task['task_id'] if task else '' }}";
+
+async function task_reset() {
+    try {
+        {
+            const url = '/datasets/' + dataset_id + '/task_actions/bulk_reset';
+            const ret = await fetch_json('POST', url, {'tasks': [task_id]}, passkey);
+            if ('error' in ret) {
+                message_alert('error - '+ret['error']);
+                return false;
+            }
+        }
+
+        {
+            const url = '/datasets/' + dataset_id + '/job_actions/bulk_reset';
+            let ret = await fetch_json('POST', url, {'jobs': [job_id]}, passkey);
+            if ('error' in ret) {
+                message_alert('error - '+ret['error']);
+                return false;
+            }
+        }
+
+        {
+            const url = '/datasets/' + dataset_id + '/status';
+            const ret = await fetch_json('PUT', url, {'status': '{{ states.DATASET_STATUS_START }}'}, passkey);
+            if ('error' in ret) {
+                message_alert('error - '+ret['error']);
+                return false;
+            }
+        }
+    } catch(err) {
+        message_alert('error - '+err);
+        return false;
+    }
+    reload();
+    return true;
+}
+
+async function task_hard_reset() {
+    try {
+        {
+            const url = '/datasets/' + dataset_id + '/task_actions/bulk_hard_reset';
+            const ret = await fetch_json('POST', url, {'tasks': [task_id]}, passkey);
+            if ('error' in ret) {
+                message_alert('error - '+ret['error']);
+                return false;
+            }
+        }
+
+        {
+            const url = '/datasets/' + dataset_id + '/job_actions/bulk_hard_reset';
+            const ret = await fetch_json('POST', url, {'jobs': [job_id]}, passkey);
+            if ('error' in ret) {
+                message_alert('error - '+ret['error']);
+                return false;
+            }
+        }
+
+        {
+            const url = '/datasets/' + dataset_id + '/dataset_actions/hard_reset';
+            const ret = await fetch_json('POST', url, {}, passkey);
+            if ('error' in ret) {
+                message_alert('error - '+ret['error']);
+                return false;
+            }
+        }
+    } catch(err) {
+        message_alert('error - '+err);
+        return false;
+    }
+    reload();
+    return true;
+}
+
+async function task_suspend() {
+    try {
+        const url = '/datasets/' + dataset_id + '/task_actions/bulk_suspend';
+        const ret = await fetch_json('POST', url, {'tasks': [task_id]}, passkey);
+        if ('error' in ret) {
+            message_alert('error - '+ret['error']);
+            return false;
+        }
+    } catch(err) {
+        message_alert('error - '+err);
+        return false;
+    }
+    reload();
+    return true;
+}
 </script>
 {% end %}
 
