--- a/iceprod/website/data/www_templates/job_detail.html
+++ b/iceprod/website/data/www_templates/job_detail.html
@@ -69,6 +69,7 @@
 <script type="text/javascript" src="/static/fetch.js"></script>
 <script type="text/javascript" src="/static/rest.js"></script>
 <script>
+var rest_api = '{{ rest_api }}';
 const passkey = "{{ passkey }}";
 const dataset_id = "{{ job['dataset_id'] if job else '' }}";
 const job_id = "{{ job['job_id'] if job else '' }}";
