--- a/iceprod/website/data/www_templates/submit.html
+++ b/iceprod/website/data/www_templates/submit.html
@@ -76,6 +76,7 @@
 <script type="text/javascript" src="/static/documentation.js"></script>
 <script type="text/javascript" src="/static/jsonlint.js"></script>-->
 <script type="text/javascript">
+var rest_api = '{{ rest_api }}';
 var passkey = '{{ passkey }}';
 var orig_config = {{ json_encode(config) }};
 var edit = {{ json_encode(edit) }};
