--- a/iceprod/website/data/www_templates/task_detail.html
+++ b/iceprod/website/data/www_templates/task_detail.html
@@ -31,6 +31,7 @@
 {% if (current_user) %}
 <div class="action">
     <button onclick='task_reset();'>Reset</button></td>
+    <button onclick='task_hard_reset();'>Hard Reset</button></td>
     <button onclick='task_suspend();'>Suspend</button></td>
     <button onclick='delete_task_logs();'>Delete Logs</button></td>
 </div>
