ret vs response

--- a/iceprod/website/data/www_templates/submit.html
+++ b/iceprod/website/data/www_templates/submit.html
@@ -82,8 +82,8 @@ var dataset_id = '{{ dataset_id }}';
 async function validator(config) {
     try {
         const ret = await fetch('/schemas/v3/dataset.schema.json');
-        if (!response.ok) {
-            throw new Error('Response status: '+response.status);
+        if (!ret.ok) {
+            throw new Error('Response status: '+ret.status);
         }
         const schema = await ret.json();
     } catch (error) {
